<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">toppings</string>
    <string name="wc">Whipped Cream</string>
    <string name="chocolate">Chocolate Drizzle</string>
    <string name="quantity">quantity</string>
    <string name="increase">Add Coffee</string>
    <string name="number">0</string>
    <string name="decrease">Delete A Coffee</string>
    <string name="price">price</string>
    <string name="order">Order</string>
</resources>
